# claude-model-switch

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
plugin/.claude-plugin/: plugin.json
plugin/commands/: cms-add.md  cms-list.md  cms-orchestrate.md  cms-remove.md  cms-setup.md  cms-start.md  cms-status.md  cms-stop.md  cms-use.md
plugin/hooks/: hooks.json  session-start.sh
plugin/hooks/scripts/: session-start.sh
src/: commands.rs  config.rs  daemon.rs  main.rs  orchestrator.rs  proxy.rs  registry.rs  rewrite.rs
tests/: integration.rs
